<resources>
    <string name="app_name">BudgetBuddyManager</string>
    <string name="budgetbuddy_login">BudgetBuddy Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="your_categories">Your Categories</string>
    <string name="new_category_name">New category name</string>
    <string name="add_category">Add Category</string>
    <string name="next_add_expense">Next: Add Expense</string>
    <string name="add_expense">Add Expense</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="start_date_time_yyyy_mm_dd_hh_mm">Start Date/Time (yyyy-MM-dd HH:mm)</string>
    <string name="end_date_time_yyyy_mm_dd_hh_mm">End Date/Time (yyyy-MM-dd HH:mm)</string>
    <string name="todo">TODO</string>
    <string name="attach_receipt">Attach Receipt</string>
    <string name="save_expense">Save Expense</string>
    <string name="see_expense_list">See Expense List</string>
    <string name="expense_list">Expense List</string>
    <string name="start_yyyy_mm_dd_hh_mm">Start (yyyy-MM-dd HH:mm)</string>
    <string name="end_yyyy_mm_dd_hh_mm">End (yyyy-MM-dd HH:mm)</string>
    <string name="apply_date_filter">Apply Date Filter</string>
    <string name="budget_goal">Budget Goal</string>
    <string name="show_graph">Show Graph</string>
    <string name="dashboard">Dashboard</string>
    <string name="monthly_budget_goal">Monthly Budget Goal</string>
    <string name="min_r0">Min: R0</string>
    <string name="save_budget">Save Budget</string>
    <string name="max_r0">Max: R0</string>
    <string name="spending_per_category">Spending per Category</string>
    <string name="back">Back</string>
    <string name="budget_progress_dashboard">Budget Progress Dashboard</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="badges">Badges:</string>
    <string name="Back">Back</string>
</resources>